# scturtle.github.io

./: .gitignore  404.html  404.markdown  CNAME  Gemfile  README.md  _config.yml  about.html  about.markdown  archive.html  atom.xml  exclude.txt  feed.xml  hugo.toml  index.html  stack.yaml  sync.sh  tags.html  turtlepool.cabal  turtlepool.hs
_includes/: footer.html  head.html  header.html
_layouts/: default.html  home.html  post.html
_posts/: 2013-04-17-random-sampling.markdown  2013-11-09-quicksort.markdown  2013-12-19-string-format-python.markdown  2015-03-14-horspool.markdown  2015-06-16-yoneda.markdown  2015-12-22-pfpl.markdown  2016-01-27-foldl.markdown  2022-03-05-swe-at-google.markdown  2022-11-26-ssa.markdown
_sass/: _dark.scss  _light.scss  base.scss
about/: index.html
asserts/: default.css  highlight.css  highlight.js  ipynb.css  ipynb.js  pygments.css
assets/: main-dark.css  main-dark.css.map  main-light.css  main-light.css.map  main.css  main.css.map
content/: 404.md  about.md
docs/: 404.html  CNAME  README.md  about.html  feed.xml  index.html  sitemap.xml
images/: markdown.webm
layouts/: list.atom.xml
posts/: 2012-07-15-test.html  2012-07-15-test.markdown  2012-07-15-turtleblog.html  2012-07-15-turtleblog.markdown  2012-07-16-turtleblog-config.html  2012-07-16-turtleblog-config.markdown  2012-08-12-quicksmiletext.html  2012-08-12-quicksmiletext.markdown  2012-08-15-vim-instant-markdown-py.html  2012-08-15-vim-instant-markdown-py.markdown  2012-10-19-project-euler-100.html  2012-10-19-project-euler-100.markdown  2012-11-06-poster-ocr.html  (+40 more)
(+51 files in other folders)
