name:               turtlepool
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable turtlepool
  main-is:          turtlepool.hs
  build-depends:    base
                  , hakyll
                  , containers
                  , pandoc
                  , process
  ghc-options:      -threaded
  default-language: Haskell2010
